[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/person.gd" type="Script" id=1]
[ext_resource path="res://audio/jingle.ogg" type="AudioStream" id=4]
[ext_resource path="res://fonts/font_dialogue.tres" type="DynamicFont" id=6]

[sub_resource type="SphereShape" id=1]
radius = 0.75

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;
render_mode unshaded;

uniform float alpha_scale : hint_range(0f, 1f) = 1f;

void fragment() {
	COLOR = vec4(vec3(0f), UV.y * 0.5 * alpha_scale);
}
"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/alpha_scale = 0.0

[sub_resource type="GradientTexture" id=4]

[sub_resource type="Animation" id=5]
resource_name = "fadein"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Control/TextureRect:material:shader_param/alpha_scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="Person" type="Spatial"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Area" type="Area" parent="."]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 1 )

[node name="SoundInteract" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -12.0
bus = "SFX Reverb"

[node name="SoundDialogue" type="AudioStreamPlayer" parent="."]
volume_db = -8.0
bus = "Dialogue"

[node name="TimerDialogue" type="Timer" parent="."]
one_shot = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="UI/Control"]
material = SubResource( 3 )
margin_top = 528.0
margin_right = 1280.0
margin_bottom = 720.0
texture = SubResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI"]
anims/fadein = SubResource( 5 )

[node name="UI2" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UI2"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueText" type="Label" parent="UI2/Control"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -512.0
margin_top = -208.0
margin_right = 512.0
margin_bottom = -16.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 2
text = "Hello there my friend this here is a TEST!
What does this look like"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="finished" from="SoundDialogue" to="." method="_on_SoundDialogue_finished"]
[connection signal="timeout" from="TimerDialogue" to="." method="_on_TimerDialogue_timeout"]
